--- a/package.json
+++ b/package.json
@@ -1,37 +1,53 @@
 {
-  "name": "not-a-tsup-component-lib",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "packageManager": "pnpm@8.6.10",
-  "scripts": {
-    "build": "tsup src/index.ts --dts",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
-  },
-  "keywords": [],
-  "author": "Michal Baran",
-  "license": "ISC",
-  "devDependencies": {
-    "@storybook/addon-essentials": "^7.1.1",
-    "@storybook/addon-interactions": "^7.1.1",
-    "@storybook/addon-links": "^7.1.1",
-    "@storybook/addon-onboarding": "^1.0.8",
-    "@storybook/blocks": "^7.1.1",
-    "@storybook/react": "^7.1.1",
-    "@storybook/react-vite": "^7.1.1",
-    "@storybook/testing-library": "^0.2.0",
-    "@types/react": "^18.2.17",
-    "@types/react-dom": "^18.2.7",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "storybook": "^7.1.1",
-    "tsup": "^7.1.0",
-    "typescript": "^5.1.6"
-  },
-  "peerDependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  }
+	"name": "not-a-tsup-component-lib",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"packageManager": "pnpm@8.6.10",
+	"scripts": {
+		"build": "tsup src/index.ts --dts",
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"storybook": "storybook dev -p 6006",
+		"build-storybook": "storybook build",
+		"commit": "cz"
+	},
+	"keywords": [],
+	"author": "Michal Baran",
+	"license": "ISC",
+	"devDependencies": {
+		"@storybook/addon-essentials": "^7.1.1",
+		"@storybook/addon-interactions": "^7.1.1",
+		"@storybook/addon-links": "^7.1.1",
+		"@storybook/addon-onboarding": "^1.0.8",
+		"@storybook/blocks": "^7.1.1",
+		"@storybook/react": "^7.1.1",
+		"@storybook/react-vite": "^7.1.1",
+		"@storybook/testing-library": "^0.2.0",
+		"@types/react": "^18.2.17",
+		"@types/react-dom": "^18.2.7",
+		"@typescript-eslint/eslint-plugin": "^6.2.0",
+		"@typescript-eslint/parser": "^6.2.0",
+		"cz-conventional-changelog": "^3.3.0",
+		"eslint": "^8.45.0",
+		"eslint-plugin-react": "^7.33.0",
+		"husky": "^8.0.3",
+		"lint-staged": "^13.2.3",
+		"prettier": "3.0.0",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"release-it": "^16.1.3",
+		"storybook": "^7.1.1",
+		"tsup": "^7.1.0",
+		"typescript": "^5.1.6",
+		"vitest": "^0.33.0"
+	},
+	"peerDependencies": {
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0"
+	},
+	"config": {
+		"commitizen": {
+			"path": "./node_modules/cz-conventional-changelog"
+		}
+	}
 }
