--- a/package.json
+++ b/package.json
@@ -42,8 +42,8 @@
 		"vitest": "^0.33.0"
 	},
 	"peerDependencies": {
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
+		"react": "^16.8 || ^17 || ^18",
+		"react-dom": "^16.8 || ^17 || ^18"
 	},
 	"config": {
 		"commitizen": {
