--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
+    "size": "size-limit",
     "commit": "cz"
   },
   "keywords": [],
   "author": "Michal Baran",
   "license": "ISC",
   "devDependencies": {
+    "@size-limit/preset-big-lib": "^8.2.6",
     "@storybook/addon-essentials": "^7.1.1",
     "@storybook/addon-interactions": "^7.1.1",
     "@storybook/addon-links": "^7.1.1",
@@ -36,6 +38,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "release-it": "^16.1.3",
+    "size-limit": "^8.2.6",
     "storybook": "^7.1.1",
     "tsup": "^7.1.0",
     "typescript": "^5.1.6",
@@ -47,6 +50,12 @@
   },
   "files": [
     "dist/*"
+  ],
+  "size-limit": [
+    {
+      "path": "dist/index.js",
+      "limit": "10 kB"
+    }
   ],
   "config": {
     "commitizen": {
